@@ -80,6 +80,7 @@ Bugs fixed
 - Bug 2254 - Ipv[4,6]RawSocket can return the wrong number of bytes sent.
 - Bug 2255 - Ipv6RawSocket does not call data sent callbacks.
 - Bug 2257 - Ipv[4,6]InterfaceContainer::Add are not consistent
+- Bug 2259 - GSL not successfully enabled for Wi-Fi DSSS error rate model
 
 Known issues
 ------------
